--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Piyush Singh - Developer</title>
+    <title>Komal Bhagat - Developer</title>
     <meta name="description" content="Full Stack Developer specializing in React, TypeScript, Node.js and modern web technologies. Building scalable applications with clean code." />
-    <meta name="author" content="Piyush SIngh" />
+    <meta name="author" content="Komal Bhagat" />
 
-    <meta property="og:title" content="Piyush SIngh - Full Stack Developer" />
+    <meta property="og:title" content="Komal Bhagat - Full Stack Developer" />
     <meta property="og:description" content="Full Stack Developer specializing in React, TypeScript, Node.js and modern web technologies" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
